--- a/user_setups/esp32/d1-mini-esp32_ili9341.ini
+++ b/user_setups/esp32/d1-mini-esp32_ili9341.ini
@@ -6,14 +6,8 @@
 ;***************************************************;
 
 [env:d1-mini-esp32_ili9341]
-platform = espressif32
-platform_packages = framework-arduinoespressif32
-framework = arduino
+extends = esp32
 board = wemos_d1_mini32
-;upload_port = COM5      ; To change the port, use platform_override.ini
-;monitor_port = COM5     ; To change the port, use platform_override.ini
-monitor_filters = esp32_exception_decoder
-board_build.partitions = user_setups/esp32_partition_app1300k_spiffs1216k.csv
 
 build_flags =
     ${env.build_flags}
