--- a/user_setups/esp32/esp32-dev_ili9488.ini
+++ b/user_setups/esp32/esp32-dev_ili9488.ini
@@ -5,19 +5,8 @@
 ;***************************************************;
 
 [env:esp32dev-ili9488]
-platform = espressif32 @ ^2.0.0
+extends = esp32
 board = esp32dev
-upload_port = COM2      ; To change the port, use platform_override.ini
-monitor_port = COM2     ; To change the port, use platform_override.ini
-; upload_protocol = espota ; Use ArduinoOTA after flashing over serial
-; upload_port = 10.4.0.171 ; IP of the ESP
-; upload_flags =
-;  --port=3232
-monitor_filters = esp32_exception_decoder
-board_build.partitions = user_setups/esp32_partition_app1300k_spiffs1216k.csv
-
-debug_tool = esp-prog
-debug_init_break = tbreak setup
 
 build_flags =
     ${env.build_flags}
