--- a/user_setups/win32/emulator_64bits.ini
+++ b/user_setups/win32/emulator_64bits.ini
@@ -11,7 +11,7 @@ build_flags =
   ;-D LV_DRV_NO_CONF
   -D LV_MEM_SIZE=262144U           ; 256kB lvgl memory
   -D USE_MONITOR
-  -D MONITOR_ZOOM=1 ; 2
+  -D MONITOR_ZOOM=1  ; can be fractional like 1.5 or 2
   -D USE_MOUSE
   -D USE_MOUSEWHEEL
   -D USE_KEYBOARD
@@ -71,7 +71,7 @@ build_flags =
 
 lib_deps =
   ${env.lib_deps}
-  lv_drivers@~7.9.0
+  ;lv_drivers@~7.9.0
   ;lv_drivers=https://github.com/littlevgl/lv_drivers/archive/7d71907c1d6b02797d066f50984b866e080ebeed.zip
   https://github.com/eclipse/paho.mqtt.c.git
   bblanchon/ArduinoJson@^6.17.2    ; Json(l) parser
