--- a/user_setups/esp32/d132-unoshield_ili9486_parallel.ini
+++ b/user_setups/esp32/d132-unoshield_ili9486_parallel.ini
@@ -5,12 +5,8 @@
 ;***************************************************;
 
 [env:d132-unoshield]
-platform = espressif32
+extends = esp32
 board = esp32dev
-upload_port = COM4      ; To change the port, use platform_override.ini
-monitor_port = COM4     ; To change the port, use platform_override.ini
-monitor_filters = esp32_exception_decoder
-board_build.partitions = user_setups/esp32_partition_app1300k_spiffs1216k.csv
 
 build_flags =
     ${env.build_flags}
