--- a/user_setups/esp32/esp32-dev_ili9488_parallel.ini
+++ b/user_setups/esp32/esp32-dev_ili9488_parallel.ini
@@ -6,16 +6,8 @@
 ;***************************************************;
 
 [env:esp32dev-mrb3511]
-platform = espressif32 @ ^2.0.0
+extends = esp32
 board = esp32dev
-upload_port = COM1      ; To change the port, use platform_override.ini
-monitor_port = COM1     ; To change the port, use platform_override.ini
-monitor_filters = esp32_exception_decoder
-board_build.partitions = user_setups/esp32_partition_app1300k_spiffs1216k.csv
-check_tool = cppcheck
-check_flags = --enable=all
-debug_tool = esp-prog
-debug_init_break = tbreak setup
 
 build_flags =
     ${env.build_flags}
