--- a/user_setups/esp32/esp32cam_st7796.ini
+++ b/user_setups/esp32/esp32cam_st7796.ini
@@ -6,20 +6,8 @@
 ;***************************************************;
 
 [env:esp32cam-st7796]
-platform = espressif32 @ ^2.0.0
+extends = esp32
 board = esp32cam
-; upload_port = COM18      ; To change the port, use platform_override.ini
-; monitor_port = COM18     ; To change the port, use platform_override.ini
-; upload_protocol = espota ; Use ArduinoOTA after flashing over serial
-; upload_port = x.x.x.x; IP of the ESP
-; upload_flags =
-;  --port=3232
-
-debug_tool = esp-prog
-debug_init_break = tbreak setup
-;board_build.partitions = min_spiffs.csv
-monitor_filters = esp32_exception_decoder
-board_build.partitions = user_setups/esp32_partition_app1300k_spiffs1216k.csv
 
 ;ESP32 CAM PINS
 build_flags =
