--- a/user_setups/esp8266/esp8266_st7735.ini
+++ b/user_setups/esp8266/esp8266_st7735.ini
@@ -5,14 +5,9 @@
 ;***************************************************;
 
 [env:esp12e-st7735]
-platform = espressif8266@^2.6.2
+extends = esp8266
 board = esp12e
-upload_port = COM8      ; To change the port, use platform_override.ini
-monitor_port = COM8     ; To change the port, use platform_override.ini
-board_build.f_flash = 40000000L
-board_build.flash_mode = dout
-board_build.ldscript = eagle.flash.4m2m.ld  ; 2Mb Spiffs
-board_build.f_cpu = 160000000L ; set frequency to 160MHz
+
 build_flags =
     ${env.build_flags}
     ${esp8266.build_flags}
