Re-organize environments

--- a/platformio.ini
+++ b/platformio.ini
@@ -74,8 +74,8 @@ lib_deps =
     git+https://github.com/fvanroie/ConsoleInput.git
     ;git+https://github.com/andrethomas/TasmotaSlave.git
     ;git+https://github.com/fvanroie/lv_components.git
-    ;git+https://github.com/lvgl/lvgl.git
-    lvgl/lvgl @^7.10.1              ; from PIO library
+    git+https://github.com/lvgl/lvgl.git
+    ;lvgl/lvgl @^7.11.0              ; from PIO library
     ;bodmer/TFT_eSPI @ 2.3.4           ; Tft SPI drivers EXACT version 2.3.5 has compile error
     git+https://github.com/Bodmer/TFT_eSPI.git
     ; ------ Unused / Test libraries
@@ -93,13 +93,16 @@ extra_scripts = tools/copy_fw.py    ; tools/pre:extra_script.py
 [esp32]
 framework = arduino
 platform = espressif32
-board = lolin_d32_pro
-;upload_port = COM6      ; To change the port, use platform_override.ini
-;monitor_port = COM6     ; To change the port, use platform_override.ini
-monitor_filters = esp32_exception_decoder
 board_build.partitions = user_setups/esp32_partition_app1300k_spiffs1216k.csv
+
+; ----- crash reporter
+monitor_filters = esp32_exception_decoder
+
+; ----- debugger
 check_tool = cppcheck
 check_flags = --enable=all
+debug_tool = esp-prog
+debug_init_break = tbreak setup
 
 build_flags =
     ${env.build_flags}
@@ -156,6 +159,16 @@ hspi =
 
 [esp8266]
 framework = arduino
+platform = espressif8266
+
+board_build.f_flash = 40000000L
+board_build.flash_mode = dout
+board_build.ldscript = eagle.flash.4m2m.ld  ; 2Mb Spiffs
+board_build.f_cpu = 160000000L ; set frequency to 160MHz
+
+; ----- crash reporter
+monitor_filters = esp8266_exception_decoder
+
 build_flags=
     -D HTTP_UPLOAD_BUFLEN=512       ; lower http upload buffer
     -D MQTT_MAX_PACKET_SIZE=1024    ; longer PubSubClient messages
