Enable ARDUINOJSON_ENABLE_PROGMEM

--- a/platformio.ini
+++ b/platformio.ini
@@ -52,7 +52,6 @@ build_flags =
     -D SPIFFS_TEMPORAL_FD_CACHE     ; speedup opening recent files
     ; -- ArduinoJson build options ----------------------------
     -D ARDUINOJSON_DECODE_UNICODE=1 ; for utf-8 symbols
-    ;-D ARDUINOJSON_ENABLE_PROGMEM=1 ; for PROGMEM arguments
     
     ; -- StreamUtils build options ----------------------------
     -D STREAMUTILS_ENABLE_EEPROM=1  ; for STM32, it also supports EEPROM
@@ -112,6 +111,8 @@ build_flags =
     -D NO_GLOBAL_HTTPUPDATE         ; dont instantiate httpUpdate
 ; -- lvgl build options -----------------------------
     -D LV_MEM_SIZE=61440U           ; 60kB lvgl memory
+; -- ArduinoJson build options ----------------------------
+    -D ARDUINOJSON_ENABLE_PROGMEM=1 ; for PROGMEM arguments
 ; -- tft_espi build options ------------------------
     ;-D USE_DMA_TO_TFT
 ; -- hasp-lvgl build options ------------------------
@@ -180,6 +181,8 @@ build_flags=
     -D PIO_FRAMEWORK_ARDUINO_LWIP2_LOW_MEMORY
 ; -- lvgl build options -----------------------------
     -D LV_MEM_SIZE=12288U           ; 12kB lvgl memory
+; -- ArduinoJson build options ----------------------------
+    -D ARDUINOJSON_ENABLE_PROGMEM=1 ; for PROGMEM arguments
 ; -- hasp-lvgl build options ------------------------
     ;-D HASP_USE_TELNET=1
     ;-D HASP_USE_SPIFFS=1
