Changes to haspDevice class

--- a/user_setups/win32/emulator_64bits.ini
+++ b/user_setups/win32/emulator_64bits.ini
@@ -76,7 +76,11 @@ lib_deps =
   https://github.com/eclipse/paho.mqtt.c.git
   bblanchon/ArduinoJson@^6.17.2    ; Json(l) parser
 
-lib_ignore = paho
+lib_ignore =
+  paho
+  AXP192
+  ArduinoLog
+  lv_fs_if
 
 src_filter =
   +<*>
@@ -89,14 +93,12 @@ src_filter =
   -<MQTTClient.c>
   -<MQTTVersion.c>
   -<SSLSocket.c>
-  -<../.pio/libdeps/emulator_64bits/lv_fs_if/lv_fs_pc.c>
-  -<../.pio/libdeps/emulator_64bits/ArduinoLog/ArduinoLog.cpp>
   -<sys/>
   -<hal/>
   -<drv/>
   -<drv/touch>
   -<drv/tft>
-  -<dev/>
+  +<dev/>
   -<hal/>
   -<svc/>
   -<hasp_filesystem.cpp>
@@ -105,11 +107,4 @@ src_filter =
   +<lang/>
   -<log/>
   +<mqtt/>
-  -<lib/ArduinoLog>
-  -<lib/lv_fs_if>
-  -<../lib/lv_fs_if/>
-  -<../lib/lv_fs_if/lv_fs_if.cpp>
-  -<../lib/lv_fs_if/lv_fs_if.h>
-  -<../lib/lv_fs_if/lv_fs_spiffs.cpp>
-  -<../lib/lv_fs_if/lv_fs_spiffs.h>
   +<../.pio/libdeps/emulator_64bits/ArduinoJson/src/ArduinoJson.h>
