Switch paho from async to single thread sync client

--- a/user_setups/win32/emulator_64bits.ini
+++ b/user_setups/win32/emulator_64bits.ini
@@ -87,10 +87,14 @@ src_filter =
   -<*.h>
   +<../hal/sdl2>
   +<../.pio/libdeps/emulator_64bits/paho/src/*.c>
-  -<../.pio/libdeps/emulator_64bits/paho/src/MQTTClient.c>
+  +<../.pio/libdeps/emulator_64bits/paho/src/MQTTClient.c>
+  -<../.pio/libdeps/emulator_64bits/paho/src/MQTTAsync.c>
+  -<../.pio/libdeps/emulator_64bits/paho/src/MQTTAsyncUtils.c>
   -<../.pio/libdeps/emulator_64bits/paho/src/MQTTVersion.c>
   -<../.pio/libdeps/emulator_64bits/paho/src/SSLSocket.c>
-  -<MQTTClient.c>
+  +<MQTTClient.c>
+  -<MQTTAsync.c>
+  -<MQTTAsyncUtils.c>
   -<MQTTVersion.c>
   -<SSLSocket.c>
   -<sys/>
