--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,6 +1,6 @@
 # These are supported funding model platforms
 
-github: [fvanroie,bblanchon] # Replace with up to 4 GitHub Sponsors-enabled usernames
+github: [bblanchon] # Replace with up to 4 GitHub Sponsors-enabled usernames
 patreon: # Replace with a single Patreon username
 open_collective: lvgl # Replace with a single Open Collective username
 ko_fi: # Replace with a single Ko-fi username
