--- a/platformio_override-template.ini
+++ b/platformio_override-template.ini
@@ -67,22 +67,29 @@ upload_port = ${env:lolind32pro-lolintft24.monitor_port}
 
 ;region -- Custom Environment configuration example -----------------
 [env:my_custom_build]
-platform = espressif32
+extends = esp32
 board = nodemcu-32s
-monitor_port = COM3
-upload_port = ${env:my_custom_build.monitor_port}
+
+upload_port = COM12     ; To change the port, use platform_override.ini
+monitor_port = COM12    ; To change the port, use platform_override.ini
+
+board_build.partitions = user_setups/esp32_partition_app1300k_spiffs1216k.csv ; default.csv
+
 debug_tool = esp-prog
 debug_init_break = tbreak setup
 build_flags =
+    ${env.build_flags}
     ${esp32.build_flags}
 ;region -- TFT_eSPI build options -----------------------------------
-    ${lcd.raspberrypi}
+    ${lcd.lolin24}
     ${esp32.vspi}
-    -D TFT_CS=5
-    -D TFT_DC=4
-    -D TFT_RST=32
-    -D TFT_BCKL=-1       ; None, configurable via web UI (e.g. 21)
-    -D TOUCH_CS=22
+    -D TFT_DC=5
+    -D TFT_CS=26 
+    -D TFT_RST=-1  ; RST
+    -D TFT_BCKL=22 ; None, configurable via web UI (e.g. 21)
+    -D TOUCH_CS=17 ; (can also be 22 or 16)
+; -- Options ----------------------------------------
+    -D HASP_USE_TELNET=1
 ;endregion
 
 ;endregion
