--- a/platformio.ini
+++ b/platformio.ini
@@ -116,7 +116,7 @@ build_flags =
 ; -- tft_espi build options ------------------------
     ;-D USE_DMA_TO_TFT
 ; -- hasp-lvgl build options ------------------------
-    ;-D HASP_USE_TELNET=1
+    -D HASP_USE_TELNET=1
     ;-D HASP_USE_SPIFFS=1
     -D HASP_USE_LITTLEFS=1
     ;-D HASP_USE_EEPROM=1
@@ -184,7 +184,7 @@ build_flags=
 ; -- ArduinoJson build options ----------------------------
     -D ARDUINOJSON_ENABLE_PROGMEM=1 ; for PROGMEM arguments
 ; -- hasp-lvgl build options ------------------------
-    ;-D HASP_USE_TELNET=1
+    -D HASP_USE_TELNET=1
     ;-D HASP_USE_SPIFFS=1
     -D HASP_USE_LITTLEFS=1
     -D HASP_USE_EEPROM=1
