Add ARDUINOJSON_ENABLE_STD_STRING for std::string

--- a/platformio.ini
+++ b/platformio.ini
@@ -171,25 +171,26 @@ board_build.f_cpu = 160000000L ; set frequency to 160MHz
 monitor_filters = esp8266_exception_decoder
 
 build_flags=
-    -D HTTP_UPLOAD_BUFLEN=512       ; lower http upload buffer
-    -D MQTT_MAX_PACKET_SIZE=1024    ; longer PubSubClient messages
-    -D HASP_CONSOLE_BUFFER=160      ; maximum length of a console/telnet command
-    -D ATOMIC_FS_UPDATE             ; enabled compressed ota updates
-    -D NO_GLOBAL_HTTPUPDATE         ; dont instantiate httpUpdate
+    -D HTTP_UPLOAD_BUFLEN=512          ; lower http upload buffer
+    -D MQTT_MAX_PACKET_SIZE=1024       ; longer PubSubClient messages
+    -D HASP_CONSOLE_BUFFER=160         ; maximum length of a console/telnet command
+    -D ATOMIC_FS_UPDATE                ; enabled compressed ota updates
+    -D NO_GLOBAL_HTTPUPDATE            ; dont instantiate httpUpdate
 ; -- lwIP Variant -----------------------------------
     ;-D PIO_FRAMEWORK_ARDUINO_LWIP2_HIGHER_BANDWIDTH
     -D PIO_FRAMEWORK_ARDUINO_LWIP2_LOW_MEMORY
 ; -- lvgl build options -----------------------------
-    -D LV_MEM_SIZE=12288U           ; 12kB lvgl memory
+    -D LV_MEM_SIZE=12288U              ; 12kB lvgl memory
 ; -- ArduinoJson build options ----------------------------
-    -D ARDUINOJSON_ENABLE_PROGMEM=1 ; for PROGMEM arguments
+    -D ARDUINOJSON_ENABLE_PROGMEM=1    ; for PROGMEM arguments
+    -D ARDUINOJSON_ENABLE_STD_STRING=1 ; for std::string
 ; -- hasp-lvgl build options ------------------------
     -D HASP_USE_TELNET=1
     ;-D HASP_USE_SPIFFS=1
     -D HASP_USE_LITTLEFS=1
     -D HASP_USE_EEPROM=1
     -D HASP_USE_ETHERNET=0
-    -D HASP_USE_CONFIG=1            ; Native application, not library
+    -D HASP_USE_CONFIG=1               ; Native application, not library
 
 lib_ignore =
     ESP32 BLE Arduino
@@ -204,18 +205,18 @@ lib_deps =
 framework = arduino
 build_flags=
     -I include/stm32f4
-    -D MQTT_MAX_PACKET_SIZE=2048    ; longer PubSubClient messages
-    -D HASP_CONSOLE_BUFFER=220      ; maximum length of a console/telnet command
-    -D IRAM_ATTR=                   ; No IRAM_ATTR available on STM32
+    -D MQTT_MAX_PACKET_SIZE=2048       ; longer PubSubClient messages
+    -D HASP_CONSOLE_BUFFER=220         ; maximum length of a console/telnet command
+    -D IRAM_ATTR=                      ; No IRAM_ATTR available on STM32
     -D ICACHE_RAM_ATTR=
     -D STM32
     -D STREAMUTILS_USE_EEPROM_UPDATE=1  ; update cell only when changed
 ; -- lvgl build options -----------------------------
-    -D LV_MEM_SIZE=20480U           ; 20kB lvgl memory
-    -D HASP_USE_SYSLOG=0            ; Needs UDP
+    -D LV_MEM_SIZE=20480U              ; 20kB lvgl memory
+    -D HASP_USE_SYSLOG=0               ; Needs UDP
     -D HASP_USE_SPIFFS=0
     -D HASP_USE_LITTLEFS=0
-    -D HASP_USE_CONFIG=1            ; Native application, not library
+    -D HASP_USE_CONFIG=1               ; Native application, not library
 
 lib_deps =
     ; sstaub/Ticker @ ^3.2.0
