--- a/platformio.ini
+++ b/platformio.ini
@@ -203,6 +203,7 @@ lib_deps =
 
 [stm32f4]
 framework = arduino
+platform = ststm32
 build_flags=
     -I include/stm32f4
     -D MQTT_MAX_PACKET_SIZE=2048       ; longer PubSubClient messages
@@ -210,6 +211,8 @@ build_flags=
     -D IRAM_ATTR=                      ; No IRAM_ATTR available on STM32
     -D ICACHE_RAM_ATTR=
     -D STM32
+    -D ARDUINOJSON_DECODE_UNICODE=1 ; for utf-8 symbols
+    -D ARDUINOJSON_ENABLE_PROGMEM=1 ; for PROGMEM arguments
     -D STREAMUTILS_USE_EEPROM_UPDATE=1  ; update cell only when changed
 ; -- lvgl build options -----------------------------
     -D LV_MEM_SIZE=20480U              ; 20kB lvgl memory
@@ -222,4 +225,3 @@ lib_deps =
     ; sstaub/Ticker @ ^3.2.0
     stm32duino/STM32duino LwIP @ ^2.1.2
     ;https://github.com/stm32duino/LwIP.git
-    
