Update ststm32 platform environment

--- a/user_setups/stm32f4xx/STM32F407VET6_black_fsmc.ini
+++ b/user_setups/stm32f4xx/STM32F407VET6_black_fsmc.ini
@@ -22,7 +22,7 @@
 ; Documentation: https://github.com/mcauser/BLACK_F407ZG
 
 [env:STM32F407VET6_black_fsmc]
-platform = ststm32
+extends = stm32f4
 board = black_f407ve
 ; upload_protocol = dfu
 upload_protocol = dfu
