--- a/user_setups/stm32f4xx/stm32f407-devebox_ili9341.ini
+++ b/user_setups/stm32f4xx/stm32f407-devebox_ili9341.ini
@@ -15,7 +15,7 @@
 ; - STM32F407VGT6 has 1 MB flash
 
 [env:DevEBox_STM32F4xx]
-platform = ststm32
+extends = stm32f4
 board = black_f407vg
 board_upload.maximum_size = 1048576 ; Flash size is wrong in variant
 ; upload_protocol = dfu
