--- a/user_setups/stm32f4xx/stm32f407-black_ili9341.ini
+++ b/user_setups/stm32f4xx/stm32f407-black_ili9341.ini
@@ -6,7 +6,7 @@
 ;***************************************************;
 
 [env:black_f407vg]
-platform = ststm32
+extends = stm32f4
 board = diymore_f407vgt
 board_build.mcu = stm32f407vgt6
 upload_protocol = dfu
