--- a/user_setups/stm32f4xx/stm32f407-black_ili9341_parallel.ini
+++ b/user_setups/stm32f4xx/stm32f407-black_ili9341_parallel.ini
@@ -6,7 +6,7 @@
 ;***************************************************;
 
 [env:stm32f4xx-parallel]
-platform = ststm32
+extends = stm32f4
 board = diymore_f407vgt
 board_build.mcu = stm32f407vet6
 upload_protocol = dfu
