--- a/user_setups/lcd_config.ini
+++ b/user_setups/lcd_config.ini
@@ -86,3 +86,27 @@ wt32-sc01 =
     -D SPI_FREQUENCY=40000000
     -D USER_SETUP_LOADED=1
     ;-D SUPPORT_TRANSACTIONS   ; Default on ESP32
+
+featherwing-35 =
+    -D HX8357D_DRIVER=1
+    -D TFT_WIDTH=320
+    -D TFT_HEIGHT=480
+    -D TFT_ROTATION=0 ; Use default, see TFT_ROTATION values
+    -D SPI_FREQUENCY=27000000
+    -D SPI_TOUCH_FREQUENCY=2500000
+    -D SPI_READ_FREQUENCY=20000000
+    -D USER_SETUP_LOADED=1
+    -D TOUCH_DRIVER=610 ;STMPE610
+    ;-D SUPPORT_TRANSACTIONS   ; Default on ESP32
+
+featherwing-24 =
+    -D ILI9341_DRIVER=1
+    -D TFT_WIDTH=240
+    -D TFT_HEIGHT=320
+    -D TFT_ROTATION=0 ; Use default, see TFT_ROTATION values
+    -D SPI_FREQUENCY=27000000
+    -D SPI_TOUCH_FREQUENCY=2500000
+    -D SPI_READ_FREQUENCY=20000000
+    -D USER_SETUP_LOADED=1
+    -D TOUCH_DRIVER=610 ;STMPE610
+    ;-D SUPPORT_TRANSACTIONS   ; Default on ESP32
