--- a/platformio.ini
+++ b/platformio.ini
@@ -83,6 +83,7 @@ lib_deps =
     ;AsyncTCP
     ;https://github.com/me-no-dev/ESPAsyncWebServer/archive/master.zip
     ;https://github.com/me-no-dev/ESPAsyncTCP/archive/master.zip
+     adafruit/Adafruit STMPE610@^1.1.3 ;STMPE610 touch controller
 
 src_filter = +<*> -<.git/> -<examples/> -<test/> -<tests/> -<stm32f4/> -<lv_font_montserrat_*.c>
 
