Pin platform to espressif32@3.0.0

--- a/user_setups/esp32/lanbon_l8.ini
+++ b/user_setups/esp32/lanbon_l8.ini
@@ -6,7 +6,7 @@
 ;***************************************************;
 
 [env:lanbon_l8]
-platform = espressif32
+platform = espressif32@3.0.0
 platform_packages = framework-arduinoespressif32
 framework = arduino
 board = esp32dev
