--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,9 @@ build_output/firmware/*.exe
 *.bin
 
 ## Visual Studio Code specific ######
-.vscode
+!.vscode
+.vscode/*
+!.vscode/extensions.json
 .vscode/.browse.c_cpp.db*
 .vscode/c_cpp_properties.json
 .vscode/launch.json
