--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,8 @@
 {
+    // See http://go.microsoft.com/fwlink/?LinkId=827846
+    // for the documentation about the extensions.json format
     "recommendations": [
-        "platformio.platformio-ide","ms-vscode.cpptools"
+        "ms-vscode.cpptools",
+        "platformio.platformio-ide"
     ]
 }
