--- a/platformio_override-template.ini
+++ b/platformio_override-template.ini
@@ -10,7 +10,8 @@ extra_configs =
     ; user_setups/esp8266/*.ini
     ; user_setups/stm32f4xx/*.ini
     ; user_setups/win32/*.ini
-    
+    ; user_setups/linux_sdl/*.ini
+
 [override]
 ; -- Hasp config options --------------------------------------
 build_flags =
