--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -33,6 +33,10 @@ jobs:
     - name: Enable Linux platform from platformio_override.ini
       run: |
         sed -i 's/; user_setups\/linux/user_setups\/linux/g' platformio_override.ini
+    - name: Install PlatformIO
+      run: |
+        apt update
+        apt install libsdl2-dev
     - name: List all files in current folder
       run: |
         ls -la
