--- a/user_setups/darwin_sdl/darwin_sdl_64bits.ini
+++ b/user_setups/darwin_sdl/darwin_sdl_64bits.ini
@@ -49,6 +49,10 @@ build_flags =
   -lSDL2
   -lm
   -lpthread
+  ; MacOS with Homebrew
+  -I/usr/local/include
+  -L/usr/local/lib
+  -DTARGET_OS_MAC=1
 
 lib_deps =
   ${env.lib_deps}
