--- a/user_setups/darwin_sdl/darwin_sdl_64bits.ini
+++ b/user_setups/darwin_sdl/darwin_sdl_64bits.ini
@@ -56,10 +56,11 @@ build_flags =
 
 lib_deps =
   ${env.lib_deps}
-  lv_drivers@~7.9.1
+  ; lv_drivers@~7.9.1
   ;lv_drivers=https://github.com/littlevgl/lv_drivers/archive/7d71907c1d6b02797d066f50984b866e080ebeed.zip
   https://github.com/eclipse/paho.mqtt.c.git
   bblanchon/ArduinoJson@^6.17.2    ; Json(l) parser
+  https://github.com/fvanroie/lv_drivers
 
 lib_ignore =
   paho
