--- a/user_setups/esp32/lanbon_l8.ini
+++ b/user_setups/esp32/lanbon_l8.ini
@@ -9,6 +9,10 @@
 extends = esp32
 board = esp32dev
 
+board_upload.flash_size=8MB
+board_upload.maximum_size = 8388608
+board_build.partitions = user_setups/esp32_partition_app2000k_spiffs4000k.csv
+
 build_flags =
     ${env.build_flags}
     ${esp32.build_flags}
