--- a/user_setups/win32/windows_sdl_64bits.ini
+++ b/user_setups/win32/windows_sdl_64bits.ini
@@ -1,4 +1,4 @@
-[env:emulator_64bits]
+[env:windows_sdl_64bits]
 platform = native@^1.1.3
 extra_scripts = 
   tools/sdl2_build_extra.py
@@ -41,8 +41,8 @@ build_flags =
   -DCMAKE_BUILD_TYPE=Release
   -DCMAKE_VERBOSE_MAKEFILE=TRUE
   ;-D NO_PERSISTENCE
-  -I.pio/libdeps/emulator_64bits/paho/src
-  -I.pio/libdeps/emulator_64bits/ArduinoJson/src
+  -I.pio/libdeps/windows_sdl_64bits/paho/src
+  -I.pio/libdeps/windows_sdl_64bits/ArduinoJson/src
   -I lib/ArduinoJson/src
   -I lib/lv_fs_if
   !python -c "import os; print(' '.join(['-I {}'.format(i[0].replace('\x5C','/')) for i in os.walk('hal/sdl2')]))"
@@ -77,6 +77,7 @@ lib_deps =
   ;lv_drivers=https://github.com/littlevgl/lv_drivers/archive/7d71907c1d6b02797d066f50984b866e080ebeed.zip
   https://github.com/eclipse/paho.mqtt.c.git
   bblanchon/ArduinoJson@^6.17.2    ; Json(l) parser
+  https://github.com/fvanroie/lv_drivers
 
 lib_ignore =
   paho
@@ -87,12 +88,12 @@ src_filter =
   +<*>
   -<*.h>
   +<../hal/sdl2>
-  +<../.pio/libdeps/emulator_64bits/paho/src/*.c>
-  +<../.pio/libdeps/emulator_64bits/paho/src/MQTTClient.c>
-  -<../.pio/libdeps/emulator_64bits/paho/src/MQTTAsync.c>
-  -<../.pio/libdeps/emulator_64bits/paho/src/MQTTAsyncUtils.c>
-  -<../.pio/libdeps/emulator_64bits/paho/src/MQTTVersion.c>
-  -<../.pio/libdeps/emulator_64bits/paho/src/SSLSocket.c>
+  +<../.pio/libdeps/windows_sdl_64bits/paho/src/*.c>
+  +<../.pio/libdeps/windows_sdl_64bits/paho/src/MQTTClient.c>
+  -<../.pio/libdeps/windows_sdl_64bits/paho/src/MQTTAsync.c>
+  -<../.pio/libdeps/windows_sdl_64bits/paho/src/MQTTAsyncUtils.c>
+  -<../.pio/libdeps/windows_sdl_64bits/paho/src/MQTTVersion.c>
+  -<../.pio/libdeps/windows_sdl_64bits/paho/src/SSLSocket.c>
   +<MQTTClient.c>
   -<MQTTAsync.c>
   -<MQTTAsyncUtils.c>
@@ -112,4 +113,4 @@ src_filter =
   +<lang/>
   -<log/>
   +<mqtt/>
-  +<../.pio/libdeps/emulator_64bits/ArduinoJson/src/ArduinoJson.h>
+  +<../.pio/libdeps/windows_sdl_64bits/ArduinoJson/src/ArduinoJson.h>
