Move STMPE610 to Feather environments

--- a/platformio.ini
+++ b/platformio.ini
@@ -39,8 +39,8 @@ monitor_speed = 115200
 
 build_flags =
 	-D PIOENV=\"${PIOENV}\"
-    ;-Os          ; Code Size Optimization
-    -Og           ; Code Debug Optimization
+    -Os          ; Code Size Optimization
+    ;-Og           ; Code Debug Optimization
     ;-w           ; Suppress warnings
     -D CORE_DEBUG_LEVEL=0           ; 0=Silent, 1=Errors, 2=Warnings
     -I include    ; include lv_conf.h and hasp_conf.h
@@ -83,7 +83,6 @@ lib_deps =
     ;AsyncTCP
     ;https://github.com/me-no-dev/ESPAsyncWebServer/archive/master.zip
     ;https://github.com/me-no-dev/ESPAsyncTCP/archive/master.zip
-     adafruit/Adafruit STMPE610@^1.1.3 ;STMPE610 touch controller
 
 src_filter = +<*> -<.git/> -<examples/> -<test/> -<tests/> -<stm32f4/> -<lv_font_montserrat_*.c>
 
