--- a/user_setups/esp32/huzzah32-featherwing-35.ini
+++ b/user_setups/esp32/huzzah32-featherwing-35.ini
@@ -27,6 +27,7 @@ build_flags =
 lib_deps =
     ${env.lib_deps}
     ${esp32.lib_deps}
+    adafruit/Adafruit STMPE610@^1.1.3 ;STMPE610 touch controller
 
 lib_ignore =
     ${env.lib_ignore}
