--- a/user_setups/esp32/esp32-touchdown.ini
+++ b/user_setups/esp32/esp32-touchdown.ini
@@ -1,4 +1,10 @@
-[env:esp32dev-touchdown]
+;***************************************************;
+;          ESP32-Touchdown custom PCB with 3.5" TFT ;
+;               - ili9488 TFT SPI 4-WIRE            ;
+;               - ft6336 touch controller           ;
+;***************************************************;
+
+[env:esp32-touchdown]
 extends = esp32
 board = esp32dev
 
@@ -16,20 +22,17 @@ build_flags =
     -D TFT_CS=15  ;// Chip select control pin
     -D TFT_DC=2  ;// Data Command control pin
     -D TFT_RST=4 ;// Reset pin (could connect to RST pin)
-    -D TFT_BCKL=5  ;None, configurable via web UI (e.g. 2 for D4)
+    -D TFT_BCKL=32  ;None, configurable via web UI (e.g. 2 for D4)
     -D SUPPORT_TRANSACTIONS
-    -D TOUCH_DRIVER=6336 ; XPT2606 Resistive touch panel driver 
+    -D TOUCH_DRIVER=6336 ; FT6336 Capacitive touch panel driver 
     -D TOUCH_SDA=21
     -D TOUCH_SCL=22
-    -D TOUCH_IRQ=27   ; not connected
-    -D TOUCH_RST=-1   ; not used, connected to 3.3V
+    -D TOUCH_IRQ=27
+    -D TOUCH_RST=-1   ; not used
     -D TOUCH_FREQUENCY=400000
     -D SPI_FREQUENCY=27000000
     -D SPI_READ_FREQUENCY=16000000
 ;endregion
-
-; GPIO18 -> SPI Clock
-; GPIO23 -> SDI (MOSI)
 
 ; -- Debugging options -----------------------------
 ;   -D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
