--- a/platformio.ini
+++ b/platformio.ini
@@ -73,8 +73,8 @@ lib_deps =
     git+https://github.com/fvanroie/ConsoleInput.git
     ;git+https://github.com/andrethomas/TasmotaSlave.git
     ;git+https://github.com/fvanroie/lv_components.git
-    git+https://github.com/lvgl/lvgl.git
-    ;lvgl/lvgl @^7.11.0              ; from PIO library
+    ;git+https://github.com/lvgl/lvgl.git
+    lvgl/lvgl @^7.11.0              ; from PIO library
     ;bodmer/TFT_eSPI @ 2.3.4           ; Tft SPI drivers EXACT version 2.3.5 has compile error
     git+https://github.com/Bodmer/TFT_eSPI.git
     ; ------ Unused / Test libraries
