--- a/user_setups/esp32/wt32-sc01.ini
+++ b/user_setups/esp32/wt32-sc01.ini
@@ -9,6 +9,10 @@
 extends = esp32
 board = esp32dev
 
+board_upload.flash_size=4MB
+board_upload.maximum_size = 4194304
+board_build.partitions = user_setups/esp32/partition_app1704k_spiffs720k.csv
+
 build_flags =
     ${env.build_flags}
     ${esp32.build_flags}
