Update config files, add merge_bin firmware

--- a/platformio.ini
+++ b/platformio.ini
@@ -86,13 +86,15 @@ lib_deps =
 
 src_filter = +<*> -<.git/> -<examples/> -<test/> -<tests/> -<stm32f4/> -<lv_font_montserrat_*.c>
 
-extra_scripts = tools/copy_fw.py    ; tools/pre:extra_script.py
 
 ; -- Platform specific build flags
 [esp32]
 framework = arduino
 platform = espressif32
-board_build.partitions = user_setups/esp32/partition_app1536k_spiffs1024k.csv
+
+board_upload.flash_size=4MB
+board_upload.maximum_size = 4194304
+board_build.partitions = user_setups/esp32/partition_app1704k_spiffs720k.csv
 
 ; ----- crash reporter
 monitor_filters = esp32_exception_decoder
@@ -143,9 +145,10 @@ ps_ram =
     -mfix-esp32-psram-cache-issue
 
 extra_scripts =
-    ${env.extra_scripts}
-    tools/copy_partitions.py
+    tools/esp_merge_bin.py
     tools/analyze_elf.py
+;    ${env.extra_scripts}
+;    tools/copy_partitions.py
 
 ; -- The ESP32 has 2 SPI Hardware Busses available to use:
 vspi =
@@ -191,6 +194,8 @@ build_flags=
     -D HASP_USE_ETHERNET=0
     -D HASP_USE_CONFIG=1               ; Native application, not library
 
+extra_scripts = tools/copy_fw.py    ; tools/pre:extra_script.py
+
 lib_ignore =
     ESP32 BLE Arduino
     GxTFT
@@ -199,6 +204,7 @@ lib_ignore =
     AXP192
 
 lib_deps =
+
 
 [stm32f4]
 framework = arduino
