--- a/user_setups/esp32/esp32cam_st7796.ini
+++ b/user_setups/esp32/esp32cam_st7796.ini
@@ -13,8 +13,7 @@ board = esp32cam
 build_flags =
     ${env.build_flags}
     ${esp32.build_flags}
-    -DBOARD_HAS_PSRAM
-    -mfix-esp32-psram-cache-issue
+    ${esp32.ps_ram}
 
 ;region -- TFT_eSPI build options ------------------------
     ${lcd.raspberrypi}
