--- a/platformio_override-template.ini
+++ b/platformio_override-template.ini
@@ -6,11 +6,11 @@
 [platformio]
 extra_configs =
 	; Uncomment or edit the lines to show more User Setups in the PIO sidebar
+    ; user_setups/darwin_sdl/*.ini
     ; user_setups/esp32/*.ini
     ; user_setups/esp8266/*.ini
-    ; user_setups/stm32f4xx/*.ini
-    ; user_setups/darwin_sdl/*.ini
     ; user_setups/linux_sdl/*.ini
+    ; user_setups/stm32f4xx/*.ini
     ; user_setups/win32/*.ini
 
 [override]
@@ -24,15 +24,16 @@ extra_default_envs =
     ; Comment unneeded environments or create extra
     ; d1-mini-esp32_ili9341
     ; d1-mini-esp8266_ili9341
-    ; lolind32pro-lolintft24
-    ; esp32dev-mrb3511
-    ; esp12e-st7735
     ; d132-unoshield
-    ; nodemcu32s-raspi
+    ; esp12e-st7735
+    ; esp32dev-mrb3511
     ; esp32dev-ili9488
     ; lanbon_l8
-    ; wt32-sc01
+    ; lolin-d32-pro_ili9341
     ; my_custom_build
+    ; nodemcu32s-raspi
+    ; wt32-sc01
+    ; ttgo_esp32_poe-ili9341
 ;endregion
 
 ;region -- Define your local COM ports for each environment ---
@@ -55,16 +56,16 @@ upload_port = 192.168.4.4 ; IP of the ESP
 upload_protocol = espota  ; Use ArduinoOTA after flashing over serial
 upload_flags = --port=3232 ; --auth=haspadmin   ; OTA password
 
-[env:ttgo_esp32_poe-lolintft24]
+[env:ttgo_esp32_poe-ili9341]
 monitor_port = COM9       ; Change to the correct port
-;upload_port = ${env:ttgo_esp32_poe-lolintft24.monitor_port}
+;upload_port = ${env:ttgo_esp32_poe-ili9341.monitor_port}
 upload_port = 192.168.4.5 ; IP of the ESP
 upload_protocol = espota  ; Use ArduinoOTA after flashing over serial
 upload_flags = --port=3232 ; --auth=haspadmin   ; OTA password
 
-[env:lolind32pro-lolintft24]
-monitor_port = COM3       ; Change to the correct port
-upload_port = ${env:lolind32pro-lolintft24.monitor_port}
+[env:lolin-d32-pro_ili9341]
+monitor_port = COM5       ; Change to the correct port
+upload_port = ${env:lolin-d32-pro_ili9341.monitor_port}
 ;endregion
 
 ;region -- Custom Environment configuration example -----------------
