--- a/user_setups/esp32/lolin-d32-pro_ili9341.ini
+++ b/user_setups/esp32/lolin-d32-pro_ili9341.ini
@@ -7,7 +7,7 @@
 
 ; !! This board already defines TFT_CS, TFT_DC and TFT_RST !!
 
-[env:lolind32pro-lolintft24]
+[env:lolin-d32-pro_ili9341]
 extends = esp32
 board = lolin_d32_pro
 
@@ -41,7 +41,3 @@ lib_ignore =
     ${env.lib_ignore}
     ${esp32.lib_ignore}
 ;endregion
-
-extra_scripts =
-    ${env.extra_scripts}
-    ${esp32.extra_scripts}
