--- a/user_setups/esp32/ttgo-esp32-poe_ili9341.ini
+++ b/user_setups/esp32/ttgo-esp32-poe_ili9341.ini
@@ -6,13 +6,9 @@
 ;               - xpt2046 touch controller          ;
 ;***************************************************;
 
-[env:ttgo_esp32_poe-lolintft24]
+[env:ttgo_esp32_poe-ili9341]
 extends = esp32
 board = esp32dev
-
-board_upload.flash_size=4MB
-board_upload.maximum_size = 4194304
-board_build.partitions = user_setups/esp32/partition_app1704k_spiffs720k.csv
 
 build_flags =
     ${env.build_flags}
