--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -44,7 +44,7 @@ jobs:
         run: |
           cat platformio_override.ini
       - name: Run PlatformIO
-        run: pio run -e d1-mini-esp32_ili9341 -e lanbon_l8 -e wt32-sc01 -e d1-mini-esp8266_ili9341 -e linux_sdl_64bits
+        run: pio run -e d1-mini-esp32_ili9341 -e esp32-touchdown -e lanbon_l8 -e m5stack-core2 -e wt32-sc01 -e d1-mini-esp8266_ili9341 -e linux_sdl_64bits
       - name: Upload output file
         uses: actions/upload-artifact@v2
         with:
