Add calendar object

--- a/test/test_obj.tavern.yaml
+++ b/test/test_obj.tavern.yaml
@@ -38,6 +38,7 @@ marks:
         - obj
         - lmeter
         - dropdown
+        - calendar
         - spinner
         - roller
   - parametrize:
