Name change from hasp-lvgl to openHASP

--- a/platformio.ini
+++ b/platformio.ini
@@ -72,7 +72,6 @@ lib_deps =
     knolleary/PubSubClient@^2.8.0    ; MQTT client
     git+https://github.com/fvanroie/ConsoleInput.git
     ;git+https://github.com/andrethomas/TasmotaSlave.git
-    ;git+https://github.com/fvanroie/lv_components.git
     ;git+https://github.com/lvgl/lvgl.git
     lvgl/lvgl @^7.11.0              ; from PIO library
     ;bodmer/TFT_eSPI @ 2.3.4           ; Tft SPI drivers EXACT version 2.3.5 has compile error
@@ -117,12 +116,13 @@ build_flags =
     -D ARDUINOJSON_ENABLE_PROGMEM=1 ; for PROGMEM arguments
 ; -- tft_espi build options ------------------------
     ;-D USE_DMA_TO_TFT
-; -- hasp-lvgl build options ------------------------
+; -- openHASP build options ------------------------
     -D HASP_USE_TELNET=1
     ;-D HASP_USE_SPIFFS=1
     -D HASP_USE_LITTLEFS=1
     ;-D HASP_USE_EEPROM=1
     -D HASP_USE_CONFIG=1            ; Native application, not library
+    -D LV_LOG_TRACE_TIMER=1
 ; -- LittleFS build options ------------------------
 	-D CONFIG_LITTLEFS_FOR_IDF_3_2
 
@@ -186,7 +186,7 @@ build_flags=
 ; -- ArduinoJson build options ----------------------------
     -D ARDUINOJSON_ENABLE_PROGMEM=1    ; for PROGMEM arguments
     -D ARDUINOJSON_ENABLE_STD_STRING=1 ; for std::string
-; -- hasp-lvgl build options ------------------------
+; -- openHASP build options -------------------------
     -D HASP_USE_TELNET=1
     ;-D HASP_USE_SPIFFS=1
     -D HASP_USE_LITTLEFS=1
