--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -48,7 +48,7 @@ jobs:
       - name: Upload output file
         uses: actions/upload-artifact@v2
         with:
-          name: hasp-lvgl firmware.zip
+          name: openHASP firmware.zip
           path: build_output/firmware/*.bin
     #- name: Create release and upload firmware
     #  run: |
