Initial mdi font support

--- a/platformio.ini
+++ b/platformio.ini
@@ -48,6 +48,7 @@ build_flags =
     -D LV_CONF_INCLUDE_SIMPLE       ; for lvgl
     -D LV_LVGL_H_INCLUDE_SIMPLE     ; for lv_drivers
     -D LV_COMP_CONF_INCLUDE_SIMPLE  ; for components
+    -D LV_SYMBOL_DEF_H              ; don't load default symbol defines
     ; -- ESP build options ------------------------------------
     -D SPIFFS_TEMPORAL_FD_CACHE     ; speedup opening recent files
     ; -- ArduinoJson build options ----------------------------
