--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,8 +1,8 @@
 # These are supported funding model platforms
 
-github: [bblanchon] # Replace with up to 4 GitHub Sponsors-enabled usernames
+github: # Replace with up to 4 GitHub Sponsors-enabled usernames
 patreon: # Replace with a single Patreon username
-open_collective: lvgl # Replace with a single Open Collective username
+open_collective: # Replace with a single Open Collective username
 ko_fi: # Replace with a single Ko-fi username
 tidelift: # Replace with a single Tidelift platform-name/package-name e.g., npm/babel
 community_bridge: # Replace with a single Community Bridge project-name e.g., cloud-foundry
