--- a/platformio_override-template.ini
+++ b/platformio_override-template.ini
@@ -22,6 +22,7 @@ build_flags =
 ;region -- Default Build Environments : Used when Build All ---
 extra_default_envs =
     ; Comment unneeded environments or create extra
+    ; arduitouch-esp32_ili9341
     ; d1-mini-esp32_ili9341
     ; d1-mini-esp8266_ili9341
     ; d132-unoshield
