--- a/platformio.ini
+++ b/platformio.ini
@@ -61,7 +61,7 @@ build_flags =
     -D HASP_VER_MAJ=0
     -D HASP_VER_MIN=5
     -D HASP_VER_REV=0
-    -D HASP_LOG_LEVEL=9
+    -D HASP_LOG_LEVEL=LOG_LEVEL_TRACE
     ${override.build_flags}
 
 ; -- Shared library dependencies in all environments
