--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,6 +33,14 @@ jobs:
     - name: Enable ESP platforms from platformio_override-template.ini
       run: |
         sed 's/; user_setups\/esp/user_setups\/esp/g' platformio_override-template.ini > platformio_override.ini
+    - name: Enable Linux platform from platformio_override.ini
+      run: |
+        sed -i 's/; user_setups\/linux/user_setups\/linux/g' platformio_override.ini
+        mkdir -p .pio/libdeps/linux_sdl_64bits/paho/src
+    - name: Install SDL2 library
+      run: |
+        sudo apt-get update
+        sudo apt-get install libsdl2-dev
     - name: List all files in current folder
       run: |
         ls -la
